Fixed the icon overlapping issue on saved cards page (#3845)
* fixed the icon overlapping issue

* fixed the icon overlapping issue

--- a/app/css/savedcards.styl
+++ b/app/css/savedcards.styl
@@ -358,7 +358,6 @@ $cardpl = 70px;
   #saved-cards-container .cardtype,
   #avsContainer .cardtype,
   #show-saved-cards .cardtype,
-  #app-card,
   #show-add-card::before {
     left: 16px;
   }
